# blahdio

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.py  package-lock.cmake
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  linux-tests.yml
cmake/: blahdioConfig.cmake.in
dope/: deps.yml
dope/dr_libs/src/: CMakeLists.txt
dope/miniaudio/src/: CMakeLists.txt
include/blahdio/: audio_data_format.h  audio_reader.h  audio_streamer.h  audio_type.h  audio_writer.h  expected.h  frame_data.h  interleaving.h  library_info.h
src/: audio_reader.cpp  audio_writer.cpp  generic_reader.h  library_info.cpp
src/binary/: binary_file_reader.cpp  binary_file_reader.h  binary_memory_reader.cpp  binary_memory_reader.h  binary_reader.cpp  binary_reader.h
src/dr_libs/: dr_libs_utils.cpp  dr_libs_utils.h
src/mackron/: blahdio_dr_libs.cpp  blahdio_dr_libs.h
src/miniaudio/: blahdio_miniaudio.cpp
src/read/: audio_reader.cpp  audio_reader_impl.cpp  audio_reader_impl.h  audio_streamer.cpp  audio_streamer_impl.cpp  audio_streamer_impl.h  generic_dr_libs_reader.cpp  generic_dr_libs_reader.h  generic_reader.h  typed_read_handler.cpp  typed_read_handler.h
src/read/binary/: binary_file_reader.cpp  binary_file_reader.h  binary_memory_reader.cpp  binary_memory_reader.h  binary_reader.cpp  binary_reader.h  binary_stream_reader.cpp  binary_stream_reader.h
src/read/flac/: flac_reader.cpp  flac_reader.h
src/read/mp3/: mp3_reader.cpp  mp3_reader.h
src/read/wav/: wav_reader.cpp  wav_reader.h
src/read/wavpack/: wavpack_file_reader.cpp  wavpack_file_reader.h  wavpack_memory_reader.cpp  wavpack_memory_reader.h  wavpack_reader.cpp  wavpack_reader.h  wavpack_stream_reader.cpp  wavpack_stream_reader.h
src/wavpack/: wavpack_file_reader.cpp  wavpack_file_reader.h  wavpack_memory_reader.cpp  wavpack_memory_reader.h  wavpack_reader.cpp  wavpack_reader.h
src/write/: audio_writer.cpp  typed_write_handler.cpp  typed_write_handler.h
src/write/wav/: wav_writer.cpp  wav_writer.h
src/write/wavpack/: wavpack_writer.cpp  wavpack_writer.h
tests/: CMakeLists.txt
tests/src/: main.cpp  util.cpp  util.h  wavpack_write_read_compare.cpp  write_read_compare.cpp
